--- a/build_and_push.yml
+++ b/build_and_push.yml
@@ -12,7 +12,7 @@ resources:
 variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: '55814138-12c3-4a65-915f-76fbf2320e92'
-  azureSubscription: 'AzureWebAppContainer'
+  azureSubscription: 'cargo-20volume-20220610'
   appName: 'rafalwebappcicd'
   containerRegistry: 'rafalregistry.azurecr.io'
   imageRepository: 'webimage'
