--- a/build_and_push.yml
+++ b/build_and_push.yml
@@ -12,7 +12,7 @@ resources:
 variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: '55814138-12c3-4a65-915f-76fbf2320e92'
-  # azureSubscription: 'cargo-20volume-20220610'
+  azureSubscription: 'cargo-20volume-20220610'
   appName: 'rafalwebappcicd'
   containerRegistry: 'rafalregistry.azurecr.io'
   imageRepository: 'webimage'
@@ -57,14 +57,22 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
-    - task: AzureWebAppContainer@1
-      displayName: 'Azure Web App on Container Deploy'
-      inputs:
-        azureSubscription: cargo-20volume-20220610
-        appName: $(appName)
-        containers: $(containerRegistry)/$(imageRepository):$(tag)
-      
-    # 
+    # - task: AzureWebAppContainer@1
+    #   displayName: 'Azure Web App on Container Deploy'
+    #   inputs:
+    #     azureSubscription: $(azureSubscription)
+    #     appName: $(appName)
+    #     containers: $(containerRegistry)/$(imageRepository):$(tag)
+      - task: AzureRmWebAppDeployment@4
+        ConnectionType: 'AzureRM'
+        azureSubscription: $(azureSubscription)
+        appType: 'webAppContainer'
+        WebAppName: ($appName)
+
+
+
+
+
     # - script: |
     #     az webapp config container set --name rafalwebapppipeline --resource-group rg-prod-rafal-portfolio --docker-custom-image-name rafalregistry.azurecr.io/webimage:latest --docker-registry-server-url https://rafalregistry.azurecr.io --docker-registry-server-user rafalregistry 
     #     az webapp restart --name rafalwebapppipeline --resource-group rg-prod-rafal-portfolio
