--- a/build_and_push.yml
+++ b/build_and_push.yml
@@ -60,7 +60,7 @@ stages:
     - task: AzureWebAppContainer@1
       displayName: 'Azure Web App on Container Deploy'
       inputs:
-        azureSubscription: $(azureSubscription)
+        azureSubscription: 'ARMmanagedidentity'
         appName: $(appName)
         containers: $(containerRegistry)/$(imageRepository):$(tag)
     # - task: AzureRmWebAppDeployment@4
