--- a/build_and_push.yml
+++ b/build_and_push.yml
@@ -44,7 +44,8 @@ stages:
         dockerfile: $(dockerfilePath)
         containerRegistry: $(dockerRegistryServiceConnection)
         repository: $(imageRepository)
-        tags: ($tag)
+        tags: |
+          latest
 
 - stage: DeployToWebApp
   displayName: 'Deploy to Azure Web App'
